--- a/SMHET.tex
+++ b/SMHET.tex
@@ -74,8 +74,9 @@ demonstrating the potential of the paradigm of PHET, its widespread application 
 large absorption cross sections associated with LSPR are also fundamentally related to the broad energy spectra and short lifetimes associated with LSPR and the subsequent hot carrier 
 distributions~\cite{KS_JCP_1983}. 
 Furthermore, the timescale of hot carrier relaxation competes 
-with transfer to adsorbate states (both occur on 100 fs timescales), which fundamentally limits the efficiency of energy transfer~\cite{WCM_Science_2015}.  Finally, the most promising plasmonic materials typically have poor catalytic activity, and similarly,
-good catalytic metals typically are poor light harvesters~\cite{SZZ_PNAS_2016}.
+with transfer to adsorbate states (both occur on 100 fs timescales), which fundamentally limits the efficiency of energy transfer~\cite{WCM_Science_2015}.  \textcolor{red}{Finally, there are a limited number of materials that show promising plasmonic
+behaviors (most prominantly silver and gold), and it is desirable to extend the pallette of available materials to include
+non-precious metals and metals with broader applicability in catalysis~\cite{SZZ_PNAS_2016}.}
 
 Considering this, an incredible opportunity exists to identify new classes of structures for mediating light-matter interactions and energy transfer events that offer the same advantages as metal nanoparticles, 
 namely exceptional light-harvesting potential, while also offering greater selectivity and efficiency in energy transfer, as well as tunable surface chemistry for enhanced catalytic activity.  
