--- a/SMHET.tex
+++ b/SMHET.tex
@@ -109,9 +109,10 @@ hot carrier excitation and decay dynamics~\cite{SAG_ACSPhotonics_2016}.  The uti
 has also provided valuable insights into the role that a metal's band-structure plays
 in determining the efficiency of hot carrier generation, and particularly in the asymmetry between hot-electron
 and hot-hole generation~\cite{SNJ_NatComm_2014}.  Nordlander and co-workers have directly compared free-electron and {\it ab initio} approaches
-and found negligible impact on hot carrier generation and dynamics in Ag nanospheres resulting from electron correlation~\cite{MLK_ACSNano_2014}.   
-though Bernardi {\it et al} have demonstrated that many-body effects are important in the hot carrier dynamics resulting
-from surface plasmon polaritons in gold and silver~\cite{BMN_NatComm_2015}.
+and found negligible impact on hot carrier generation and dynamics in Ag nanospheres resulting from electron correlation~\cite{MLK_ACSNano_2014}.  \textcolor{red}{However, many-body effects are not negligible for hot-carrier dynamics
+in general; for example, Bernardi {\it et al} have demonstrated that many-body effects are important 
+in the overall hot carrier dynamics resulting
+from surface plasmon polaritons in gold, and also in the decay mechanisms for hot-carriers in silver~\cite{BMN_NatComm_2015}.}
 
 We develop a novel approach for studying hot carrier dynamics that may arise from arbitrary electromagnetic
 fields, including the unique near-fields that arise from SMA on hybrid dielectric-metal nanoparticles and LSPR
