--- a/SMHET.tex
+++ b/SMHET.tex
@@ -166,8 +166,18 @@ accumulate in excited-state configurations, enabling the SMA fields to drive tra
 Given the simplicity of the underlying electronic Hamiltonian, the field-free Hamiltonian matrix is diagonal, and only the dipolar
 interaction of the nanoparticle with the external field can induce transitions among the electronic configurations, hence the treatment in 
 this work neglects excited-state thermalization contributions from electron-electron scattering.  
-\textcolor{red}{}
-These contributions will be explored in future work.  
+\textcolor{red}{As shown in previous work, the inclusion of many-body effects can impact the calculation
+of hot-carrier distributions when transitions from $d$ bands are relevant, which is in principle whenever the perturbing
+field contains frequency components that overlap with interband transitions involving $d$ bands~\cite{MLK_ACSNano_2014,BMN_NatComm_2015, Atwater_Review}.  In this work, we explore SMA involving Ag, Au, and Pt nanoparticles, and we caution the reader that many-body effects 
+which are neglected in this work are expected to have an impact on the hot-carrier distributions predicted for Au and Pt, which both have energetic gaps between the $d$-band and the Fermi level which are smaller than energy components of the optical fields
+considered here.  Examination of these three metals within our model still presents considerable value because it provides
+insight into the hot-carriers in three distinct regimes of the driving field, which includes a superposition
+of the plasmon and dielectric scattering fields.  In particular, these regimes include (1) when the plasmon 
+resonance and the dielectric scattering resonance overlap in energy with transitions in the quantum model (i.e. SMA involving Au), 
+(2) when the dielectric scattering resonances has overlap with quantum transitions and the plasmon
+resonance overlaps partially (i.e. SMA involving Ag), and (3) when only the dielectric scattering resoances overlap with 
+quantum transitions (i.e. SMA involving Pt).  Future work will focus on further developments of this modeling approach to include
+many-body effects, and investigation of these effects on the hot-carrier distributions and dynamics resulting from SMA.}
 
 Also because of the diagonal nature of the field-free Hamiltonian, each configuration $|\Phi_i^a\rangle$ is an eigenfunction
 of the field-free Hamiltonian.  This simplifies the interpretation of the electronic structure relative to the CIS 
