New Revisions Made

--- a/SMHET.bib
+++ b/SMHET.bib
@@ -15,6 +15,14 @@ year = {2016},
 }
 
 
+@article{Atwater_Review,
+author = {P. Narang and R. Sundararaman and H. A. Atwater},
+title = {Plasmonic hot carrier dynamics in solid-state and chemical systems for energy conversion},
+journal = {Nanophotonics},
+volume = {5},
+pages = {96-11},
+year = {2016}
+}
 
 @article{SP_JCP_96,
 author = {J. M. Sanz-Serna and A. Portillo},
