--- a/SMHET_SI.tex
+++ b/SMHET_SI.tex
@@ -127,7 +127,7 @@ and the off-diagonal matrix elements can be evaluated as
 of the underlying many-electron wavefunction.  It is important to note
 that while coulomb repulsion is not included in our current approach, Pauli exclusion, which is
 an inherently many-body effect, is enforced by the antisymmetry
-of the wavefunction through the Slater-Condon rules used to derive the matrix elements in Eq. (8) and (9).
+of the wavefunction through the Slater-Condon rules used to derive the matrix elements in Eq. (6) through (9).
 Importantly, terms analogous to those in Eq. (9) are not included in methodologies like Linear Response Time-Dependent Density
 Functional Theory (LR-TDDFT) or methods that use time-dependent perturbation theory (TDPT) to first order.  In fact, setting
 the terms in Eq. (9) to zero yields TDPT expressions for the rates of the CIS coefficients.
