--- a/SMHET.tex
+++ b/SMHET.tex
@@ -358,7 +358,19 @@ We have shown that scattering mediated absorption can generate hot carriers whil
 This result points to the potential for realizing efficient hot carrier generation and transfer in non-precious metals that are 
 earth abundant and cost-effective; \textcolor{red}{future investigations that utilize
 more realistic models of the electronic structure will be performed to develop a more detailed
-understanding of factors that influence the efficiency of hot-carrier generation in non- or poor plasmonic metals}.   Our results also reveal that 
+understanding of factors that influence the efficiency of hot-carrier generation in non- or poor plasmonic metals.
+Additional developments that focus on a treatement of the optical properties
+of the metal that is self-consistent across the electroydynamics and quantum dynamics domains may also be valuable and will be explored.  Currently, the electrodynamics
+calculations are performed using bulk dielectric data for the metals of interest, though disparities
+from bulk behavior have been well documented for particles of this size~\cite{KS_JCP_1983,CTP_3,SKD_Nature_2012,CTP}.
+Analogous calculations to those presented in this work that utilze size-dependent corrections to
+dielectric function in the electrodymanics calculations suggest that the hot-electron dynamics
+resulting from SMA may be sensitive to the size-dependent dielectric response of the metal nanoparticles involved 
+(see Figure S5). In principle, the dielectric function may be derived directly from electronic struture calculations of
+the metal nanoparticles, and so a self-consistent approach would include deriving the dielectric
+function from the same electronic structure model used for the many-electron dynamics.}   
+
+Our results also reveal that 
 unique electronic dynamics can be realized by modulating the frequency and linewidth of the scattering resonances, which 
 can be controlled by the size and/or refractive index of the dielectric structure.  In particular, high quality 
 factor scattering resonances (e.g. whispering gallery modes) can induce electronic dynamics that persist for hundreds of 
