--- a/SMHET.tex
+++ b/SMHET.tex
@@ -212,7 +212,9 @@ and the orbital populations are given by the diagonal elements of the 1-electron
 ^1D^q_q(t) = \langle \Psi(t) | \hat{a}^{\dagger}_q \hat{a}_q | \Psi(t) \rangle,
 \end{equation} 
 where the second-quantized operator $\hat{a}_q^{\dagger}$ ($\hat{a}_q$) creates (kills) an electron
-in orbital $q$~\cite{Szabo}.  The orbital indices can be uniquely mapped to the relevant orbital quantum numbers ($n_x, n_y, n_z$ for
+in orbital $q$~\cite{Szabo}.  \textcolor{red}{The hot-carrier populations plotted in Figures 1 and 2 panels (e) and (f)
+are computed as $^1D^q_q(t)-^1D^q_q(t=0)$, and similiarly for the change in occupations plotted
+in Figure 3 panels (b) and (c).} The orbital indices can be uniquely mapped to the relevant orbital quantum numbers ($n_x, n_y, n_z$ for
 the PIW NC model) so that the orbital energies can be readily computed (see SI for more details). 
 
 \begin{figure}
@@ -360,15 +362,18 @@ earth abundant and cost-effective; \textcolor{red}{future investigations that ut
 more realistic models of the electronic structure will be performed to develop a more detailed
 understanding of factors that influence the efficiency of hot-carrier generation in non- or poor plasmonic metals.
 Additional developments that focus on a treatement of the optical properties
-of the metal that is self-consistent across the electroydynamics and quantum dynamics domains may also be valuable and will be explored.  Currently, the electrodynamics
+of the metal that is self-consistent across the electroydynamics and quantum dynamics domains may also be valuable and will be explored.  In principle, the dielectric function may be derived directly from electronic struture calculations of
+the metal nanoparticles, and so a self-consistent approach would include deriving the dielectric
+function from the same electronic structure model used for the hot-carrier dynamics.  Currently, the electrodynamics
 calculations are performed using bulk dielectric data for the metals of interest, though disparities
 from bulk behavior have been well documented for particles of this size~\cite{KS_JCP_1983,CTP_3,SKD_Nature_2012,CTP}.
-Analogous calculations to those presented in this work that utilze size-dependent corrections to
+Analogous calculations that utilze size-dependent corrections to
 dielectric function in the electrodymanics calculations suggest that the hot-electron dynamics
-resulting from SMA may be sensitive to the size-dependent dielectric response of the metal nanoparticles involved 
-(see Figure S5). In principle, the dielectric function may be derived directly from electronic struture calculations of
-the metal nanoparticles, and so a self-consistent approach would include deriving the dielectric
-function from the same electronic structure model used for the many-electron dynamics.}   
+resulting from SMA may be sensitive to the size-dependent dielectric response of the metal nanoparticles involved,
+though the qualitative features of the hot-carrier dynamics reported in this work
+are preserved upon inclusion of these corrections (see Figure S5).  The overall similarity 
+is likely due to the fact that the scattered field associated with the large dielectric
+structure plays the dominant role in driving the dynamics.}   
 
 Our results also reveal that 
 unique electronic dynamics can be realized by modulating the frequency and linewidth of the scattering resonances, which 
