--- a/SMHET.bib
+++ b/SMHET.bib
@@ -45,7 +45,7 @@ year = {2013}
 
 @article{ZG_JPCC_2014,
 title = {Optical Generation of Hot Plasmonic Carriers in Metal Nanocrystals: The Effects
-of SHape and Field Enhancement},
+of Shape and Field Enhancement},
 journal = {J. Phys. Chem. C},
 author = {H. Zhang and A. O. Govorov},
 volume = {118},
@@ -71,6 +71,14 @@ volume = {79},
 pages = {6130 - 6139}
 }
 
+@article{CS_JCP_2003,
+author = {Coronado, E. A. and Schatz, G. C.},
+title = {Surface plasmon broadening for arbitrary shape nanoparticles: A geometrical probability approach},
+journal = {J. Chem. Phys.},
+year = {2003},
+volume = {119},
+pages = {3926}
+}
 #Ref 2 in CTP paper
 @article{SKD_Nature_2012,
 title = {Quantum plasmon resonances of individual metallic nanoparticles},
