--- a/SMHET_SI.bib
+++ b/SMHET_SI.bib
@@ -64,6 +64,17 @@ volume = {79},
 pages = {6130−6139}
 }
 
+
+@article{CS_JCP_2003,
+author = {Coronado, E. A. and Schatz, G. C.},
+title = {Surface plasmon broadening for arbitrary shape nanoparticles: A geometrical probability approach},
+journal = {J. Chem. Phys.},
+year = {2003},
+volume = {119},
+pages = {3926}
+}
+
+
 #Ref 2 in CTP paper
 @article{SKD_Nature_2012,
 title = {Quantum plasmon resonances of individual metallic nanoparticles},
