--- a/SMHET_SI.tex
+++ b/SMHET_SI.tex
@@ -135,12 +135,17 @@ The terms in Eq. (9) have an important
 role in the hot-carrier dynamics in SMA because of the long lifetimes associated with the scattering resonances, and hence, the
 long duration of the optical fields that drive these dynamics.  The discrepancy between is shown in Figure S4 where we perform
 two calculations with the same driving field: one where the full TDCIS equations are solved, and one where the terms in Eq. (9) 
-are set to zero, yielding TDPT in the CIS basis.} 
+are set to zero, yielding a equations of motion where only transitions between the ground- and singly-excited
+configurations are considered, similar to linear-response or TDPT-based approaches.} 
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{Ag_LR_vs_TDCIS.png}
-\caption{Comparison of hot-electron dynamics as computed from the full TDCIS method and time-dependent perturbation theory in 
-the CIS basis. }
+\caption{Comparison of hot-electron dynamics as computed from the full TDCIS method and one where
+excited-to-excited configurations are neglected in the spirit of approaches based on linear-response
+theory and time-dependent perturbation theory to first order.  While the two approaches agree at short
+times, the long-time dynamics can show significant departure as population accumulates
+in excited-state configurations.  These calculations consider 685 nm dielectric nanospheres (n=2.6)
+decorated with 2nm Ag nanocubes. }
 \end{center}
 \end{figure}
 
@@ -148,8 +153,9 @@ the CIS basis. }
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{Ag_SC_Compare.png}
-\caption{Comparison of hot-electron dynamics as computed from the full TDCIS method and time-dependent perturbation theory in
-the CIS basis. }
+\caption{Comparison of hot-electron dynamics with from SMA with and without a phenomenological size
+correction to the dielectric function of silver in 685 dielectric nanospheres (n=2.6) decorated with 2 nm Ag nanocubes.
+for Ag-decorated  }
 \end{center}
 \end{figure}
 
@@ -184,9 +190,33 @@ of the field is required at some time $t_m = t_2 + m\cdot dt$ where $m$ is non-i
 {\bf E}(t_m) =  {\bf E}(t_2) + \frac{{\bf E}(t_3)-{\bf E}(t_1) }{t_3 - t_1 } \cdot m\cdot dt.
 \end{equation}
 
-The optical response of Au and Pt in the FDTD simulations utilizes permittivity data from the work of Johnson and Christy~\cite{JC_PRB_1972} and Palik~\cite{Palik}, respectively.  We assume a static dielectric constant of 2.6 for
+The optical response of Au, Pt, and Ag in the FDTD simulations utilizes permittivity 
+data from the work of Johnson and Christy~\cite{JC_PRB_1972} (Au) and Palik~\cite{Palik} (Pt and Ag).  
+We assume a static dielectric constant of 2.6 for
 the dielectric nanospheres in this work, which is comparable to the visible dielectric constant of titanium dioxide. 
-
+\textcolor{red}{The prototype calculation of the impacts on SMA resulting from size effects in the dielectric response
+of silver utilizes the phenomenological size correction for the plasmon damping rate in nanocubes suggested by 
+Coronado and Schatz~\cite{CS_JCP_2003},}
+\begin{equation}
+\gamma_{SC} = \gamma_{bulk} + \frac{A v_F}{L_{eff}}
+\end{equation}
+\textcolor{red}{where $L_{eff} = 2 L/3$ for cubes, where $L$ is 2 nm in this case, we take $A$ to b 1
+and $v_F$ is taken to be 1.39e6 $m/s$ for silver.    
+We incorporate $\gamma_{SC}$ into a Drude model for the intra-band contribution to silvers dielectric function,}
+\begin{equation}
+\epsilon_{Drude,SC}(\omega) = 1 - \frac{\omega_P^2}{\omega^2 + i\gamma_{SC}\omega}.
+\end{equation}
+\textcolor{red}{We take $\omega_P$ and $\gamma_{bulk}$ from a Drude+2Lorentz fit to the Palik data between 200-800 nm;
+specifically, $\hbar \omega_P = 8.73 eV$ and $\hbar \gamma_{bulk} = 0.075 eV$.  We infer the
+inter-band contribution to the dielectric function from the bulk experimental data and from the bulk Drude fit,}
+\begin{equation}
+\epsilon_{inter}(\omega) = \epsilon_{Palik}(\omega) - \epsilon_{Drude,bulk}(\omega).
+\end{equation}
+\textcolor{red}{Finally, the dielectric function used for the size-corrected calculations is defined as}
+\begin{equation}
+\epsilon_{SC}(\omega) = \epsilon_{inter}(\omega) + \epsilon_{Drude,SC}(\omega).
+\end{equation}
+\textcolor{red}{Results from these prototpye calculations are shown in Figure S5.}
 \bibliography{SMHET_SI} 
 
 \end{document}
