--- a/SMHET.tex
+++ b/SMHET.tex
@@ -320,7 +320,12 @@ to the resonances of the $d=270nm$ dielectric NS or the Pt nanoparticle.  For ex
 more effective at generating holes in the lowest lying orbital ($E_F - 1.6 eV$) 
 and electrons in the highest 
 lying orbital ($E_F + 0.84 eV$) in the PIW Pt NC active space as compared to FP resonance of the $d=270nm$ NS (see Figure 2 (e) and (f)).  
-The hot carriers driven by WGM also show much more persistent dynamics, and continue to evolve beyond 100 fs (see Figure 2 (e) and (f) and Figure S2).
+The hot carriers driven by WGM also show much more persistent dynamics, and continue to evolve beyond 100 fs (see Figure 2 (e) and (f) and Figure S2).  \textcolor{red}{Fairly rapid fluctuations in the hot-carrier populations 
+are observed in both Au and Pt nanoparticles at relatively short times for all three regimes; this presumably results from the
+broad distribution of energies in the incident optical fields that encounter the metal nanoparticles combined with
+the density of available transition channels.  By contrast, analogoues calculations that have a lower density of
+transition channels through neglect of excited-state to excited-state transitions show smoother dynamics
+(see Figure S4).}
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{Au_WGM_Spectrum_and_Trajectories.png}
